# python-royal-mail-click-and-drop-api

./: .gitignore  .gitlab-ci.yml  .travis.yml  404.html  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  click-and-drop-api-v1.yaml  docs-requirements.txt  git_push.sh  index.html  maintenance.md  mkdocs.yml  objects.inv  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
AddressRequest/: index.html
BillingDetailsRequest/: index.html
CreateOrderErrorResponse/: index.html
CreateOrderLabelErrorResponse/: index.html
CreateOrderRequest/: index.html
CreateOrderResponse/: index.html
CreateOrdersRequest/: index.html
CreateOrdersResponse/: index.html
CreatePackagesResponse/: index.html
DeleteOrdersResource/: index.html
DeletedOrderInfo/: index.html
DimensionsRequest/: index.html
ErrorResponse/: index.html
FailedOrderResponse/: index.html
GetOrderDetailsResource/: index.html
GetOrderInfoResource/: index.html
GetOrderLineResult/: index.html
GetOrdersDetailsResponse/: index.html
GetOrdersResponse/: index.html
GetPostalDetailsResult/: index.html
GetShippingDetailsResult/: index.html
GetTagDetailsResult/: index.html
GetVersionResource/: index.html
Importer/: index.html
LICENSE/: index.html
LabelGenerationRequest/: index.html
LabelsApi/: index.html
ManifestDetailsResponse/: index.html
ManifestEligibleOrdersRequest/: index.html
ManifestErrorsErrorDetailsResponse/: index.html
ManifestErrorsResponse/: index.html
ManifestOrdersResponse/: index.html
ManifestsApi/: index.html
OrderErrorInfo/: index.html
OrderErrorResponse/: index.html
OrderFieldResponse/: index.html
OrderUpdateError/: index.html
OrdersApi/: index.html
PostageDetailsRequest/: index.html
ProductItemRequest/: index.html
RecipientDetailsRequest/: index.html
SenderDetailsRequest/: index.html
ShipmentPackageRequest/: index.html
TagRequest/: index.html
UpdateOrderStatusRequest/: index.html
UpdateOrderStatusResponse/: index.html
UpdateOrdersStatusRequest/: index.html
UpdatedOrderInfo/: index.html
VersionApi/: index.html
api/: index.html
changelog/: index.html
click_and_drop_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
contributing/: index.html
docs/: AddressRequest.md  BillingDetailsRequest.md  CreateOrderErrorResponse.md  CreateOrderLabelErrorResponse.md  CreateOrderRequest.md  CreateOrderResponse.md  CreateOrdersRequest.md  CreateOrdersResponse.md  CreatePackagesResponse.md  DeleteOrdersResource.md  DeletedOrderInfo.md  DimensionsRequest.md  ErrorResponse.md  FailedOrderResponse.md  GetOrderDetailsResource.md  GetOrderInfoResource.md  GetOrderLineResult.md  GetOrdersDetailsResponse.md  GetOrdersResponse.md  GetPostalDetailsResult.md  GetShippingDetailsResult.md  GetTagDetailsResult.md  GetVersionResource.md  Importer.md  LICENSE.md  LabelGenerationRequest.md  LabelsApi.md  ManifestDetailsResponse.md  ManifestEligibleOrdersRequest.md  ManifestErrorsErrorDetailsResponse.md  ManifestErrorsResponse.md  ManifestOrdersResponse.md  ManifestsApi.md  OrderErrorInfo.md  OrderErrorResponse.md  OrderFieldResponse.md  OrderUpdateError.md  OrdersApi.md  PostageDetailsRequest.md  ProductItemRequest.md  (+13 more)
examples/: create_order.py  create_order.py.out  generate_label.py  package_size_and_cost.py  package_size_and_cost.py.out  view_orders.py  view_specific_order.py  view_specific_orders.py  view_specific_orders.py.out  view_version.py  view_version.py.out
maintenance/: index.html
openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
search/: search_index.json
test/: test_address_request.py  test_billing_details_request.py  test_choose_size_by_weight.py  test_create_order_error_response.py  test_create_order_label_error_response.py  test_create_order_request.py  test_create_order_response.py  test_create_orders_request.py  test_create_orders_response.py  test_create_packages_response.py  test_delete_orders_resource.py  test_deleted_order_info.py  test_dimensions_request.py  test_error_response.py  test_failed_order_response.py  test_get_order_details_resource.py  test_get_order_info_resource.py  test_get_order_line_result.py  test_get_orders_details_response.py  test_get_orders_response.py  test_get_postal_details_result.py  test_get_shipping_details_result.py  test_get_tag_details_result.py  test_get_version_resource.py  test_importer.py  test_label_generation_request.py  test_labels_api.py  test_manifest_details_response.py  test_manifest_eligible_orders_request.py  test_manifest_errors_error_details_response.py  test_manifest_errors_response.py  test_manifest_orders_response.py  test_manifests_api.py  test_order_error_info.py  test_order_error_response.py  test_order_update_error.py  (+15 more)
(+72 files in other folders)
