[tool.poetry]
name = "click_and_drop_api"
version = "1.0.0"
description = "ChannelShipper & Royal Mail Public API"
authors = ["OpenAPI Generator Community <team@openapitools.org>"]
license = "Unlicense"
readme = "README.md"
repository = "https://https://github.com/niccokunzmann/python-royal-mail-click-and-drop-api"
keywords = ["OpenAPI", "OpenAPI-Generator", "ChannelShipper & Royal Mail Public API"]
include = ["click_and_drop_api/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
