[project]
name = "click_and_drop_api"
version = "1.0.0"
description = "ChannelShipper & Royal Mail Public API"
authors = [
  {name = "Nicco Kunzmann", email = "niccokunzmann@rambler.ru"},
  {name = "OpenAPI Generator Community",email = "team@openapitools.org"},
]
readme = "README.md"
keywords = ["OpenAPI", "OpenAPI-Generator", "ChannelShipper & Royal Mail Public API"]
requires-python = ">=3.9"

classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2)",
  "typing-extensions (>=4.7.1)",
]

[project.urls]
Documentation = "https://niccokunzmann.github.io/python-royal-mail-click-and-drop-api/"
Repository = "https://github.com/niccokunzmann/python-royal-mail-click-and-drop-api"

[tool.poetry]
requires-poetry = ">=2.0"

# Local development dependencies
[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "docs" },
  { include-group = "cli" },
]

test = [
  "pytest (>= 7.2.1)",
  "pytest-cov (>= 2.8.1)",
  "tox (>= 3.9.0)",
  "flake8 (>= 4.0.0)",
  "types-python-dateutil (>= 2.8.19.14)",
  "mypy (>= 1.5)",
]

docs = [
  "mkdocs-material",
  "mkdocs-htmlproofer-plugin",
  # Python API documentation (not neccessary for applications).
  "mkdocstrings[python]",
  # Autodoc.
  "mkdocs-api-autonav",
  "typer>=0.21.1",
]

cli = [
  "tox",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [
  "click_and_drop_api",
  #"test",  # auto-generated tests
  #"tests", # hand-written tests
]
# TODO: enable "strict" once all these individual checks are passing
# strict = true

# List from: https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

## Getting these passing should be easy
strict_equality = true
extra_checks = true

## Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

## These shouldn't be too much additional work, but may be tricky to
## get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

### These next few are various gradations of forcing use of type annotations
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
#
### This one isn't too hard to get passing, but return on investment is lower
#no_implicit_reexport = true
#
### This one can be tricky to get passing if you use a lot of untyped libraries
#warn_return_any = true

[[tool.mypy.overrides]]
module = [
  "click_and_drop_api.configuration",
]
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
